[gd_scene load_steps=3 format=3 uid="uid://level1"]

[ext_resource type="Script" path="res://scripts/level1.gd" id="1"]
[ext_resource type="PackedScene" path="res://board.tscn" id="2"]

[node name="level1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0

[node name="MovesLabel" type="Label" parent="TopBar"]
text = "Moves Left: 10"

[node name="ScoreLabel" type="Label" parent="TopBar"]
text = "Score: 0"

[node name="Board" parent="." instance=ExtResource("2")]
position = Vector2(128, 96)

[node name="WinDialog" type="AcceptDialog" parent="."]
visible = false
title = "You Win"

[node name="LoseDialog" type="AcceptDialog" parent="."]
visible = false
title = "You Lose"

[node name="Tutorial" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TutorialLabel" type="Label" parent="Tutorial"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 8.0
offset_right = 120.0
text = "Match 3 in a row!"
horizontal_alignment = 1

[node name="HandPointer" type="TextureRect" parent="Tutorial"]
offset_left = 180.0
offset_top = 170.0
offset_right = 220.0
offset_bottom = 210.0
stretch_mode = 0

[node name="PlayButton" type="Button" parent="Tutorial"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_right = 60.0
offset_bottom = -16.0
text = "Play"
theme_type_variation = ""
